--- a/generators/magic-item-generator.html
+++ b/generators/magic-item-generator.html
@@ -166,44 +166,39 @@ title: Magic Item Generator
   <input type="submit" value="Loot the Body" class="generator-button" onclick="getItems()">
 </div>
 
-<!-- Item Container -->
-<!-- <div id="item-container">
-  <div id="item1-con">
-    <h2 id="item1-name"></h2>
-    <p id="item1-det"></p>
-    <p id="item1-desc"></p>
-  </div>
-</div> -->
-
-<!-- TEST -->
+<!-- Item Containers -->
 <div id="result-container">
   <div id="item1-con" class="item-con">
-    <div id="item1-name" class="item-name">Item 1</div>
-    <p id="item1-det" class="item-details">Details 1</p>
-    <p id="item1-desc">Description 1</p>
+    <div id="item1-loader" class="lds-dual-ring"></div>
+    <div id="item1-name" class="item-name">Generating Item</div>
+    <p id="item1-det" class="item-details">...</p>
+    <p id="item1-desc" class="item-desc">...</p>
   </div>
   <div id="item2-con" class="item-con">
-    <div id="item2-name" class="item-name">Item 2</div>
+    <div id="item2-loader" class="lds-dual-ring"></div>
+    <div id="item2-name" class="item-name">Generating Item</div>
     <p id="item2-det" class="item-details">Details 2</p>
-    <p id="item2-desc">Description 2</p>
+    <p id="item2-desc" class="item-desc">Description 2</p>
   </div>
   <div id="item3-con" class="item-con">
-    <div id="item3-name" class="item-name">Item 3</div>
-    <p id="item3-det" class="item-details">Details 3</p>
-    <p id="item3-desc">Description 3</p>
+    <div id="item3-loader" class="lds-dual-ring"></div>
+    <div id="item3-name" class="item-name">Generating Item</div>
+    <p id="item3-det" class="item-details">...</p>
+    <p id="item3-desc" class="item-desc">...</p>
   </div>
   <div id="item4-con" class="item-con">
-    <div id="item4-name" class="item-name">Item 4</div>
-    <p id="item4-det" class="item-details">Details 4</p>
-    <p id="item4-desc">Description 4</p>
+    <div id="item4-loader" class="lds-dual-ring"></div>
+    <div id="item4-name" class="item-name">Generating Item</div>
+    <p id="item4-det" class="item-details">...</p>
+    <p id="item4-desc" class="item-desc">...</p>
   </div>
   <div id="item5-con" class="item-con">
-    <div id="item5-name" class="item-name">Item 5</div>
-    <p id="item5-det" class="item-details">Details 5</p>
-    <p id="item5-desc">Description 5</p>
+    <div id="item5-loader" class="lds-dual-ring"></div>
+    <div id="item5-name" class="item-name">Generating Item</div>
+    <p id="item5-det" class="item-details">...</p>
+    <p id="item5-desc" class="item-desc">...</p>
   </div>
 </div>
-<!-- END TEST -->
 
 <br>
 
