Added sentient magic item power level.

--- a/generators/magic-item-generator.html
+++ b/generators/magic-item-generator.html
@@ -88,6 +88,8 @@ title: Magic Item Generator
           <label for="high">High (89)</label><br>
           <input type="checkbox" id="curse" name="power-level-checkbox" value="curse" onchange="curseChecked(this)">
           <label for="curse">Curse (72)</label><br>
+          <input type="checkbox" id="sentient" name="power-level-checkbox" value="sentient" onchange="curseChecked(this)">
+          <label for="sentient">Sentient (25)</label><br>
         </fieldset>
         <input type="checkbox" id="power-level-toggle" onchange="togglePowerLevels(this)" checked>
         <label for="power-level-toggle">Select/Deselect All</label>
@@ -177,8 +179,8 @@ title: Magic Item Generator
   <div id="item2-con" class="item-con">
     <div id="item2-loader" class="lds-dual-ring"></div>
     <div id="item2-name" class="item-name">Generating Item</div>
-    <p id="item2-det" class="item-details">Details 2</p>
-    <p id="item2-desc" class="item-desc">Description 2</p>
+    <p id="item2-det" class="item-details">...</p>
+    <p id="item2-desc" class="item-desc">...</p>
   </div>
   <div id="item3-con" class="item-con">
     <div id="item3-loader" class="lds-dual-ring"></div>
