Added regenEffect function and got it working for regenerating single effect and item name. Further testing needed and need to update item details as well.

--- a/generators/magic-item-generator.html
+++ b/generators/magic-item-generator.html
@@ -184,7 +184,7 @@ title: Magic Item Generator
     <div class="item-flex-container item-desc">
       <p id="item1-effect1">...</p>
       <img name="regen-button" id="item1-effect1-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
     <div class="item-flex-container item-desc">
       <p id="item1-effect2">...</p>
@@ -254,7 +254,7 @@ title: Magic Item Generator
     <div class="item-flex-container item-desc">
       <p id="item3-effect1">...</p>
       <img name="regen-button" id="item3-effect1-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this)">
     </div>
     <div class="item-flex-container item-desc">
       <p id="item3-effect2">...</p>
