--- a/generators/magic-item-generator.html
+++ b/generators/magic-item-generator.html
@@ -189,22 +189,22 @@ title: Magic Item Generator
     <div class="item-flex-container item-desc">
       <p id="item1-effect2">...</p>
       <img name="regen-button" id="item1-effect2-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
     <div class="item-flex-container item-desc">
       <p id="item1-effect3">...</p>
       <img name="regen-button" id="item1-effect3-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
     <div class="item-flex-container item-desc">
       <p id="item1-effect4">...</p>
       <img name="regen-button" id="item1-effect4-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
     <div class="item-flex-container item-desc">
       <p id="item1-effect5">...</p>
       <img name="regen-button" id="item1-effect5-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
   </div>
   <!-- Item 2-->
@@ -219,27 +219,27 @@ title: Magic Item Generator
     <div class="item-flex-container item-desc">
       <p id="item2-effect1">...</p>
       <img name="regen-button" id="item2-effect1-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
     <div class="item-flex-container item-desc">
       <p id="item2-effect2">...</p>
       <img name="regen-button" id="item2-effect2-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
     <div class="item-flex-container item-desc">
       <p id="item2-effect3">...</p>
       <img name="regen-button" id="item2-effect3-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
     <div class="item-flex-container item-desc">
       <p id="item2-effect4">...</p>
       <img name="regen-button" id="item2-effect4-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
     <div class="item-flex-container item-desc">
       <p id="item2-effect5">...</p>
       <img name="regen-button" id="item2-effect5-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
   </div>
   <!-- Item 3-->
@@ -254,27 +254,27 @@ title: Magic Item Generator
     <div class="item-flex-container item-desc">
       <p id="item3-effect1">...</p>
       <img name="regen-button" id="item3-effect1-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenEffect(this)">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
     <div class="item-flex-container item-desc">
       <p id="item3-effect2">...</p>
       <img name="regen-button" id="item3-effect2-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
     <div class="item-flex-container item-desc">
       <p id="item3-effect3">...</p>
       <img name="regen-button" id="item3-effect3-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
     <div class="item-flex-container item-desc">
       <p id="item3-effect4">...</p>
       <img name="regen-button" id="item3-effect4-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
     <div class="item-flex-container item-desc">
       <p id="item3-effect5">...</p>
       <img name="regen-button" id="item3-effect5-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
   </div>
   <!-- Item 4-->
@@ -289,27 +289,27 @@ title: Magic Item Generator
     <div class="item-flex-container item-desc">
       <p id="item4-effect1">...</p>
       <img name="regen-button" id="item4-effect1-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
     <div class="item-flex-container item-desc">
       <p id="item4-effect2">...</p>
       <img name="regen-button" id="item4-effect2-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
     <div class="item-flex-container item-desc">
       <p id="item4-effect3">...</p>
       <img name="regen-button" id="item4-effect3-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
     <div class="item-flex-container item-desc">
       <p id="item4-effect4">...</p>
       <img name="regen-button" id="item4-effect4-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
     <div class="item-flex-container item-desc">
       <p id="item4-effect5">...</p>
       <img name="regen-button" id="item4-effect5-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
   </div>
   <!-- Item 5-->
@@ -324,27 +324,27 @@ title: Magic Item Generator
     <div class="item-flex-container item-desc">
       <p id="item5-effect1">...</p>
       <img name="regen-button" id="item5-effect1-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
     <div class="item-flex-container item-desc">
       <p id="item5-effect2">...</p>
       <img name="regen-button" id="item5-effect2-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
     <div class="item-flex-container item-desc">
       <p id="item5-effect3">...</p>
       <img name="regen-button" id="item5-effect3-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
     <div class="item-flex-container item-desc">
       <p id="item5-effect4">...</p>
       <img name="regen-button" id="item5-effect4-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
     <div class="item-flex-container item-desc">
       <p id="item5-effect5">...</p>
       <img name="regen-button" id="item5-effect5-regen" src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate"
-        class="regen-button" onclick="regenField('npc-name-header')">
+        class="regen-button" onclick="regenEffect(this.id)">
     </div>
   </div>
 </div>
