Added new magic effect CSV and updated the MIG blurb.

--- a/generators/magic-item-generator.html
+++ b/generators/magic-item-generator.html
@@ -7,13 +7,13 @@ title: Magic Item Generator
 
 <!-- Header -->
 <div>
-  <p>This tool randomly generates D&D 5e items with (mostly) weak and (hopefully) unique magical enchantments.
+  <p>This tool randomly generates D&D 5e items with (hopefully) unique magical enchantments.
     I hope this helps when your players want to loot the body of random goblin #3.</p>
   <p id="possible-items">
-    The generator randomly selects from lists of items and magical effects to create TRILLIONS of possible items.
-    Select or deselect from the lists below to generate specific types of items. A CSV file with the complete list of
-    magic effects can be downloaded
-    <a href="/downloads/ILTB-Effects-20230310.csv" download>here</a>.
+    The generator uses a list of items and a list of magical effects to generate its items. You can select specific item
+    categories or magical effect power levels to narrow down the types of items it creates. A CSV file with the complete
+    list of 510 magic effects can be downloaded
+    <a href="/downloads/ILTB-Effects-20230419.csv" download>here</a>.
   </p>
 </div>
 
@@ -176,8 +176,8 @@ title: Magic Item Generator
   <div id="item1-con" class="item-con">
     <div id="item1-loader" class="lds-dual-ring"></div>
     <div class="item-name">
-      <span id="item1-prefix"></span> 
-      <span id="item1-name">Generating Item</span> 
+      <span id="item1-prefix"></span>
+      <span id="item1-name">Generating Item</span>
       <span id="item1-suffix"></span>
     </div>
     <p id="item1-det" class="item-details">...</p>
@@ -211,8 +211,8 @@ title: Magic Item Generator
   <div id="item2-con" class="item-con">
     <div id="item2-loader" class="lds-dual-ring"></div>
     <div class="item-name">
-      <span id="item2-prefix"></span> 
-      <span id="item2-name">Generating Item</span> 
+      <span id="item2-prefix"></span>
+      <span id="item2-name">Generating Item</span>
       <span id="item2-suffix"></span>
     </div>
     <p id="item2-det" class="item-details">...</p>
@@ -246,8 +246,8 @@ title: Magic Item Generator
   <div id="item3-con" class="item-con">
     <div id="item3-loader" class="lds-dual-ring"></div>
     <div class="item-name">
-      <span id="item3-prefix"></span> 
-      <span id="item3-name">Generating Item</span> 
+      <span id="item3-prefix"></span>
+      <span id="item3-name">Generating Item</span>
       <span id="item3-suffix"></span>
     </div>
     <p id="item3-det" class="item-details">...</p>
@@ -281,8 +281,8 @@ title: Magic Item Generator
   <div id="item4-con" class="item-con">
     <div id="item4-loader" class="lds-dual-ring"></div>
     <div class="item-name">
-      <span id="item4-prefix"></span> 
-      <span id="item4-name">Generating Item</span> 
+      <span id="item4-prefix"></span>
+      <span id="item4-name">Generating Item</span>
       <span id="item4-suffix"></span>
     </div>
     <p id="item4-det" class="item-details">...</p>
@@ -316,8 +316,8 @@ title: Magic Item Generator
   <div id="item5-con" class="item-con">
     <div id="item5-loader" class="lds-dual-ring"></div>
     <div class="item-name">
-      <span id="item5-prefix"></span> 
-      <span id="item5-name">Generating Item</span> 
+      <span id="item5-prefix"></span>
+      <span id="item5-name">Generating Item</span>
       <span id="item5-suffix"></span>
     </div>
     <p id="item5-det" class="item-details">...</p>
