Added treasure generator to generators page.

--- a/generators/dnd-treasure-generator.html
+++ b/generators/dnd-treasure-generator.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: DnD 5e Treasure Generator
+title: DnD 5e Treasure Hoard Generator
 ---
 
 <script src="../javascript/dnd5eTreasureScripts.js"></script>
