--- a/_tabs/generators.html
+++ b/_tabs/generators.html
@@ -9,6 +9,9 @@ order: 1
         <div class="card-header d-flex justify-content-between">
             <a href="magic-item-generator.html" class="ml-1 mr-2">Magic Item Generator (D&D 5e)</a>
         </div>
+        <div class="card-header d-flex justify-content-between">
+            <a href="dnd-treasure-generator.html" class="ml-1 mr-2">Treasure Hoard Generator (D&D 5e)</a>
+        </div>
         <!-- <div class="card-header d-flex justify-content-between">
             <a href="pf2e-magic-item-generator.html" class="ml-1 mr-2">Magic Item Generator (Pathfinder 2e)</a>
         </div> -->
