--- a/generators/pf2e-treasure-generator.html
+++ b/generators/pf2e-treasure-generator.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Pathfinder 2e Treasure Generator
+title: Pathfinder 2e Treasure Generator (Beta)
 ---
 
 <script src="../javascript/pf2eTreasureScripts.js"></script>
@@ -8,15 +8,16 @@ title: Pathfinder 2e Treasure Generator
 <!-- Header -->
 <div>
     <p>
-        This generator randomly generates treasure for Pathfinder 2e by selecting magic items from all officially
-        published Pathfinder 2e items.
+        This tool generates treasure/loot for Pathfinder 2e by randomly selecting magic items from a database of all 
+        officially published Pathfinder 2e items. Narrow down the generated items by selecting/deselecting the desired 
+        item levels and/or categories in the menus below.
     </p>
 </div>
 
 <!-- Options -->
 <div>
     <!-- Item Levels -->
-    <button type="button" class="collapsible">Item Level</button>
+    <button type="button" class="collapsible">Item Levels</button>
     <div class="content">
         <div class="flex-container margin-top-10">
             <!-- Levels 1-10 -->
@@ -72,21 +73,21 @@ title: Pathfinder 2e Treasure Generator
             <!-- Levels 21-28 and 0 -->
             <div class="col no-left-pad">
                 <fieldset class="no-left-pad" id="item-level-fs">
-                    <input type="checkbox" id="lvl-21" name="level-checkbox" value="lvl-21" checked>
+                    <input type="checkbox" id="lvl-21" name="level-checkbox" value="lvl-21">
                     <label for="lvl-21">21</label><br>
-                    <input type="checkbox" id="lvl-22" name="level-checkbox" value="lvl-22" checked>
+                    <input type="checkbox" id="lvl-22" name="level-checkbox" value="lvl-22">
                     <label for="lvl-22">22</label><br>
-                    <input type="checkbox" id="lvl-23" name="level-checkbox" value="lvl-23" checked>
+                    <input type="checkbox" id="lvl-23" name="level-checkbox" value="lvl-23">
                     <label for="lvl-23">23</label><br>
-                    <input type="checkbox" id="lvl-24" name="level-checkbox" value="lvl-24" checked>
+                    <input type="checkbox" id="lvl-24" name="level-checkbox" value="lvl-24">
                     <label for="lvl-24">24</label><br>
-                    <input type="checkbox" id="lvl-25" name="level-checkbox" value="lvl-25" checked>
+                    <input type="checkbox" id="lvl-25" name="level-checkbox" value="lvl-25">
                     <label for="lvl-25">25</label><br>
-                    <input type="checkbox" id="lvl-26" name="level-checkbox" value="lvl-26" checked>
+                    <input type="checkbox" id="lvl-26" name="level-checkbox" value="lvl-26">
                     <label for="lvl-26">26</label><br>
-                    <input type="checkbox" id="lvl-27" name="level-checkbox" value="lvl-27" checked>
+                    <input type="checkbox" id="lvl-27" name="level-checkbox" value="lvl-27">
                     <label for="lvl-27">27</label><br>
-                    <input type="checkbox" id="lvl-28" name="level-checkbox" value="lvl-28" checked>
+                    <input type="checkbox" id="lvl-28" name="level-checkbox" value="lvl-28">
                     <label for="lvl-28">28</label><br>
                     <input type="checkbox" id="lvl-0" name="level-checkbox" value="lvl-0" checked>
                     <label for="lvl-0">0 (Mundane Items)</label><br>
@@ -105,29 +106,29 @@ title: Pathfinder 2e Treasure Generator
                 <fieldset id="category-fs">
                     <input type="checkbox" id="adjustments" name="category-checkbox" value="adjustments" checked>
                     <label for="adjustments">Adjustments</label><br>
-                    <input type="checkbox" id="adventuring-gear" name="category-checkbox" value="adventuring-gear"
+                    <input type="checkbox" id="adventuring-gear" name="category-checkbox" value="adventuring gear"
                         checked>
                     <label for="adventuring-gear">Adventuring Gear</label><br>
-                    <input type="checkbox" id="alchemical-items" name="category-checkbox" value="alchemical-items"
+                    <input type="checkbox" id="alchemical-items" name="category-checkbox" value="alchemical items"
                         checked>
                     <label for="alchemical-items">Alchemical Items</label><br>
-                    <input type="checkbox" id="animals-and-gear" name="category-checkbox" value="animals-and-gear"
+                    <input type="checkbox" id="animals-and-gear" name="category-checkbox" value="animals and gear"
                         checked>
                     <label for="animals-and-gear">Animals and Gear</label><br>
                     <input type="checkbox" id="armor" name="category-checkbox" value="armor" checked>
                     <label for="armor">Armor</label><br>
-                    <input type="checkbox" id="artifacts" name="category-checkbox" value="artifacts" checked>
+                    <input type="checkbox" id="artifacts" name="category-checkbox" value="artifacts">
                     <label for="artifacts">Artifacts</label><br>
-                    <input type="checkbox" id="assistive-items" name="category-checkbox" value="assistive-items"
+                    <input type="checkbox" id="assistive-items" name="category-checkbox" value="assistive items"
                         checked>
                     <label for="assistive-items">Assistive Items</label><br>
-                    <input type="checkbox" id="blighted-boons" name="category-checkbox" value="blighted-boons" checked>
+                    <input type="checkbox" id="blighted-boons" name="category-checkbox" value="blighted boons" checked>
                     <label for="blighted-boons">Blighted Boons</label><br>
                     <input type="checkbox" id="consumables" name="category-checkbox" value="consumables" checked>
                     <label for="consumables">Consumables</label><br>
                     <input type="checkbox" id="contracts" name="category-checkbox" value="contracts" checked>
                     <label for="contracts">Contracts</label><br>
-                    <input type="checkbox" id="cursed-items" name="category-checkbox" value="cursed-items" checked>
+                    <input type="checkbox" id="cursed-items" name="category-checkbox" value="cursed items" checked>
                     <label for="cursed-items">Cursed Items</label><br>
                     <input type="checkbox" id="customizations" name="category-checkbox" value="customizations" checked>
                     <label for="customizations">Customizations</label><br>
@@ -138,9 +139,9 @@ title: Pathfinder 2e Treasure Generator
                 <fieldset id="category-fs">
                     <input type="checkbox" id="grimoires" name="category-checkbox" value="grimoires" checked>
                     <label for="grimoires">Grimoires</label><br>
-                    <input type="checkbox" id="held-items" name="category-checkbox" value="held-items" checked>
+                    <input type="checkbox" id="held-items" name="category-checkbox" value="held items" checked>
                     <label for="held-items">Held Items</label><br>
-                    <input type="checkbox" id="intelligent-items" name="category-checkbox" value="intelligent-items" checked>
+                    <input type="checkbox" id="intelligent-items" name="category-checkbox" value="intelligent items" checked>
                     <label for="intelligent-items">Intelligent Items</label><br>
                     <input type="checkbox" id="materials" name="category-checkbox" value="materials" checked>
                     <label for="materials">Materials</label><br>
@@ -152,7 +153,7 @@ title: Pathfinder 2e Treasure Generator
                     <label for="runes">Runes</label><br>
                     <input type="checkbox" id="shields" name="category-checkbox" value="shields" checked>
                     <label for="shields">Shields</label><br>
-                    <input type="checkbox" id="siege-weapons" name="category-checkbox" value="siege-weapons">
+                    <input type="checkbox" id="siege-weapons" name="category-checkbox" value="siege weapons">
                     <label for="siege-weapons">Siege Weapons</label><br>
                     <input type="checkbox" id="snares" name="category-checkbox" value="snares" checked>
                     <label for="snares">Snares</label><br>
@@ -165,11 +166,11 @@ title: Pathfinder 2e Treasure Generator
             <!-- Column 3 -->
             <div class="col no-left-pad">
                 <fieldset id="category-fs">
-                    <input type="checkbox" id="structures" name="category-checkbox" value="structures" checked>
+                    <input type="checkbox" id="structures" name="category-checkbox" value="structures">
                     <label for="structures">Structures</label><br>
                     <input type="checkbox" id="tattoos" name="category-checkbox" value="tattoos" checked>
                     <label for="tattoos">Tattoos</label><br>
-                    <input type="checkbox" id="trade-goods" name="category-checkbox" value="trade-goods" checked>
+                    <input type="checkbox" id="trade-goods" name="category-checkbox" value="trade goods" checked>
                     <label for="trade-goods">Trade Goods</label><br>
                     <input type="checkbox" id="vehicles" name="category-checkbox" value="vehicles">
                     <label for="vehicles">Vehicles</label><br>
@@ -177,7 +178,7 @@ title: Pathfinder 2e Treasure Generator
                     <label for="wands">Wands</label><br>
                     <input type="checkbox" id="weapons" name="category-checkbox" value="weapons" checked>
                     <label for="weapons">Weapons</label><br>
-                    <input type="checkbox" id="worn-items" name="category-checkbox" value="worn-items" checked>
+                    <input type="checkbox" id="worn-items" name="category-checkbox" value="worn items" checked>
                     <label for="worn-items">Worn Items</label><br>
                 </fieldset>
                 <input type="checkbox" id="categories-toggle" onchange="toggleAllCategories(this)" checked>
@@ -204,6 +205,20 @@ title: Pathfinder 2e Treasure Generator
         });
     }
 </script>
+
+<br>
+
+<!-- Number of items selector -->
+<div class="w3-row w3-padding-16 centered-text">
+    <label>Number of items:</label>
+    <select name="num_items" id="num_items">
+      <option value="1">1</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5</option>
+    </select>
+  </div>
 
 <!-- Button -->
 <div>
